fix css in dark mode

--- a/docs/_sass/clipboard.scss
+++ b/docs/_sass/clipboard.scss
@@ -11,8 +11,8 @@ pre.codeblock-pre {
   font-size: 1.5rem;
   border-radius: 4px;
   width: 100%;
-  box-shadow: var(--box-shadow-primary);
-  background-color: var(--color-secondary-dark) !important;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+  background-color: #212529 !important;
   max-width: 700px;
 }
 
@@ -21,7 +21,7 @@ pre.codeblock-pre {
   display: inline-flex;
   overflow: auto;
   justify-content: left;
-  color: var(--color-primary-medium);
+  color: #f8f9fa;
   margin: 0px;
   padding: 0px;
 }
@@ -31,7 +31,7 @@ pre.codeblock-pre {
   overflow-x: auto;
   padding: 1rem;
   margin: 0px;
-  color: var(--color-primary-medium);
+  color: #f8f9fa;
 }
 
 .btn-copy-wrap {
